- add JUnit tests